# skyblock_trading_tool

./: .env.example  Cargo.toml  Dockerfile  Insomnia_2024-06-29.json  compose-dev.yaml  diesel.toml  docker-compose.yaml  manual-project-setup.md  readme.md
migrations/2024-07-05-214740_init/: down.sql  up.sql
migrations/2024-07-09-132950_p_item/: down.sql  up.sql
migrations/2024-07-09-143720_indexes/: down.sql  up.sql
migrations/2024-07-09-165430_item_time_track/: down.sql  up.sql
migrations/2024-07-09-175628_fix_p_item/: down.sql  up.sql
migrations/2024-07-09-230501_compile_procedure/: down.sql  up.sql
migrations/2024-07-13-172718_slug/: down.sql  up.sql
migrations/2024-07-13-173022_trigger_on_p_item/: down.sql  up.sql
s2t-front/: README.md  index.html  package.json  pnpm-lock.yaml
s2t-front/src/: App.vue
s2t-front/src/assets/: main.css
s2t-front/src/components/: ItemCardView.vue  Loader.vue
s2t-front/src/models/: item-info.ts  item.ts  page.ts
s2t-front/src/router/: index.ts
s2t-front/src/views/: HomeView.vue  ItemDetailsView.vue
src/: auction_response.rs  fetch.rs  http.rs  item.rs  main.rs  open_api_doc.rs  schema.rs
src/bo/: mod.rs  p_s2t_item.rs
src/dto/: duration_dto.rs  item_info_dto.rs  mod.rs  page_dto.rs  state_dto.rs
src/dto/util/: mod.rs  p_item_dto.rs
